--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cg15app",
+  "name": "Tunder",
   "version": "1.0.0",
-  "description": "cg15app: An Ionic project",
+  "description": "Tunder is an example application for use with the UmbracoRestApi project",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
